# py-reduce-binary

./: .gitignore  README.md  build_python.sh  build_python_sdist.sh  build_reduce.sh  build_reduce_linux.sh  build_reduce_mac.sh  linux_build.Dockerfile  pyproject.toml  requirements_test.txt
.github/workflows/: build_and_release.yml  check_app_version.yml  tests.yml
docs/: CHANGELOG.md
python/: pyproject.toml  setup.py
python/src/reduce_binary/: __init__.py  executable.py  executable.pyi  helpers.py
scripts/: get_current_platform.py
tests/: test_helpers.py  test_wheel.py
